feat: "Processingクリエイティブ・コーディング入門" 第3章まで

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello p5</title>
-    <script src="main.ts"></script>
+<!--    <script src="main.ts"></script>-->
+<!--    <script src="figure2.1.ts"></script>-->
+<!--    <script src="figure3.1.ts"></script>-->
+<!--    <script src="figure3.2.ts"></script>-->
+<!--    <script src="figure3.3.ts"></script>-->
+<!--    <script src="figure3.6.ts"></script>-->
+    <script src="figure3.8.ts"></script>
 </head>
 <body>
 </body>
