--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 <!--    <script src="figure3.2.ts"></script>-->
 <!--    <script src="figure3.3.ts"></script>-->
 <!--    <script src="figure3.6.ts"></script>-->
-    <script src="figure3.8.ts"></script>
+<!--    <script src="figure3.8.ts"></script>-->
+    <script src="figure4.1.ts"></script>
 </head>
 <body>
 </body>
