feat: "Processingクリエイティブ・コーディング入門" 第5章まで

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 <!--    <script src="figure3.3.ts"></script>-->
 <!--    <script src="figure3.6.ts"></script>-->
 <!--    <script src="figure3.8.ts"></script>-->
-    <script src="figure4.1.ts"></script>
+<!--    <script src="./figure4.1.ts"></script>-->
+    <script src="./figure5.1.ts"></script>
+
 </head>
 <body>
 </body>
