--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <!--    <script src="figure3.6.ts"></script>-->
 <!--    <script src="figure3.8.ts"></script>-->
 <!--    <script src="./figure4.1.ts"></script>-->
-    <script src="./figure5.1.ts"></script>
-
+<!--    <script src="./figure5.1.ts"></script>-->
+    <script src="./figure6.1.ts"></script>
 </head>
 <body>
 </body>
