feat: "Processingクリエイティブ・コーディング入門" 第7章まで

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
 <!--    <script src="figure3.8.ts"></script>-->
 <!--    <script src="./figure4.1.ts"></script>-->
 <!--    <script src="./figure5.1.ts"></script>-->
-    <script src="./figure6.1.ts"></script>
+<!--    <script src="./figure6.1.ts"></script>-->
+    <script src="./figure7.1.ts"></script>
+
 </head>
 <body>
 </body>
