feat: "Processingクリエイティブ・コーディング入門" 第8章①デバッグ中

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
 <!--    <script src="./figure4.1.ts"></script>-->
 <!--    <script src="./figure5.1.ts"></script>-->
 <!--    <script src="./figure6.1.ts"></script>-->
-    <script src="./figure7.1.ts"></script>
-
+<!--    <script src="./figure7.1.ts"></script>-->
+<!--    <script src="./figure8.2.ts"></script>-->
+    <script src="./figure8.3.ts"></script>
 </head>
 <body>
 </body>
