--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
 <!--    <script src="./figure6.1.ts"></script>-->
 <!--    <script src="./figure7.1.ts"></script>-->
 <!--    <script src="./figure8.2.ts"></script>-->
-    <script src="./figure8.3.ts"></script>
+<!--    <script src="./figure8.3.ts"></script>-->
+    <script src="./generative_i1.1.ts"></script>
 </head>
 <body>
 </body>
