--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
 <!--    <script src="./figure8.2.ts"></script>-->
 <!--    <script src="./figure8.3.ts"></script>-->
 <!--    <script src="./generative_i1.1.ts"></script>-->
-    <script src="./generative_4.6.ts"></script>
+<!--    <script src="./generative_4.6.ts"></script>-->
+<!--    <script src="./generative_5.1.ts"></script>-->
+<!--    <script src="./generative_5.3.ts"></script>-->
+    <script src="./generative_5.5.ts"></script>
 </head>
 <body>
 </body>
