--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello p5</title>
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
 <!--    <script src="main.ts"></script>-->
 <!--    <script src="figure2.1.ts"></script>-->
 <!--    <script src="figure3.1.ts"></script>-->
@@ -20,8 +21,7 @@
 <!--    <script src="./generative_i1.1.ts"></script>-->
 <!--    <script src="./generative_4.6.ts"></script>-->
 <!--    <script src="./generative_5.1.ts"></script>-->
-<!--    <script src="./generative_5.3.ts"></script>-->
-    <script src="./generative_5.5.ts"></script>
+    <script src="./generative_5.3.ts"></script>
 </head>
 <body>
 </body>
